2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add seahorse-plugins (which
	was split from seahorse)

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions: updated for 2.23.1

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* versions: revert
	* versions-stable: and commit to the right file :-)

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* versions: fix perl versions

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable: updated for 2.22.1

2008-04-04  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/automail.py: Parse 2.24 schedule file.
	* schedule/wiki.py: Parse 2.24 schedule file.

2008-03-24  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: don't limit gtk+ to 2.13.
	Remove gail, since it has been integrated in gtk+.

2008-03-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add a local mirror here too

2008-03-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/convert-to-tarballs.py: add --local-only to be used with
	the file:// mirror so we don't try to download stuff. Fast fast fast.

2008-03-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/convert-to-tarballs.py:
	* smoketesting/tarball-conversion-stable.config:
	Add a file:// mirror for download.gnome.org so that we can run the
	script on window and have super-fast result! That's very very
	convenient with --versions-only

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: update for 2.23.x

2008-03-12  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: update sabayon for 2.22.0

2008-03-11  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: updated for 2.22.0. Committing it now so it doesn't
	get lost somewhere... There might still be one or two updates.

2008-03-11  Olav Vitters  <olav@bkor.dhs.org>
